--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,16 +8,15 @@
 </head>
 <body>
 <header class="page-header">
-  <div class="container container--mobil">
+  <div class="container container--mobile">
     <nav class="main-nav main-nav--nojs">
       <div class="main-nav__wrapper-head">
         <a class="main-nav__logo-link" href="index.html">
-          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39"
-            alt="логотип Cat Energy">
-          <img class="main-nav__logo-img--tablet" src="img/logo-tablet.svg" width="174" height="59"
-            alt="логотип Cat Energy">
-          <img class="main-nav__logo-img--desktop" src="img/logo-desktop.svg" width="203" height="60"
-            alt="логотип Cat Energy">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39" alt="Питание для котов Cat Energy">
+          </picture>
         </a>
         <a class="main-nav__toggle main-nav__toggle--opened">Меню</a>
       </div>
@@ -40,21 +39,20 @@
 </header>
 <main class="main-catalog">
   <section class="product-catalog">
-    <div class="container container--mobil">
+    <div class="container container--mobile">
       <h1 class="product-catalog__title">Каталог продукции</h1>
     </div>
-    <div class="container container--mobil">
+    <div class="container container--mobile">
       <ul class="product-catalog__list">
         <li class="product-catalog__item">
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 500 г со вкусом курицы">
-                <img class="product__img--tablet" src="img/chicken-small-tablet@1x.png" width="324" height="172"
-                  alt="Корм Cat Energy PRO 500 г со вкусом курицы">
-                <img class="product__img--desktop" src="img/chicken-small-desktop@1x.png" width="245" height="172"
-                  alt="Корм Cat Energy PRO 500 г со вкусом курицы">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                  <img class="product__img" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом курицы">
+                </picture>
               </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
@@ -81,12 +79,11 @@
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/chicken-big-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-                <img class="product__img--tablet" src="img/chicken-big-tablet@1x.png" width="324" height="208"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-                <img class="product__img--desktop" src="img/chicken-big-desktop@1x.png" width="245" height="208"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                  <img class="product__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                </picture>
               </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h2>
@@ -113,12 +110,12 @@
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/fish-small-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
-                <img class="product__img--tablet" src="img/fish-small-tablet@1x.png" width="324" height="174"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-                <img class="product__img--desktop" src="img/fish-small-desktop@1x.png" width="245" height="174"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                  <img class="product__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x"
+                    alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
+                </picture>
               </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 500 г</a></h2>
@@ -145,12 +142,12 @@
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/fish-big-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
-                <img class="product__img--tablet" src="img/fish-big-tablet@1x.png" width="324" height="208"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-                <img class="product__img--desktop" src="img/fish-big-desktop@1x.png" width="245" height="208"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                  <img class="product__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x"
+                    alt="Корм Cat Energy PRO 1000 г со вкусом рыбы">
+                </picture>
               </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy PRO 1000 г</a></h2>
@@ -177,12 +174,12 @@
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 500 г со вкусом гречки">
-                <img class="product__img--tablet" src="img/buckwheat-small-tablet@1x.png" width="324" height="174"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-                <img class="product__img--desktop" src="img/buckwheat-small-desktop@1x.png" width="245" height="174"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x"
+                    alt="Корм Cat Energy PRO 500 г со вкусом гречки">
+                </picture>
               </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 500 г</a></h2>
@@ -209,13 +206,13 @@
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 500 г со вкусом гречки">
-                <img class="product__img--tablet" src="img/buckwheat-big-tablet@1x.png" width="324" height="208"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-                <img class="product__img--desktop" src="img/buckwheat-big-desktop@1x.png" width="245" height="208"
-                  alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
-              </a>
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x"
+                    alt="Корм Cat Energy PRO 1000 г со вкусом гречки">
+                </picture>
+                </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 1000 г</a></h2>
                 <div class="product__description">
@@ -241,12 +238,12 @@
           <div class="product-catalog__item-wrapper">
             <article class="product">
               <a class="product__img-link" href="#">
-                <img class="product__img" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
-                  alt="Корм Cat Energy PRO 500 г со вкусом риса">
-                <img class="product__img--tablet" src="img/rice-small-tablet@1x.png" width="324" height="174"
-                  alt="Корм Cat Energy PRO 500 г со вкусом риса">
-                <img class="product__img--desktop" src="img/rice-small-desktop@1x.png" width="245" height="174"
-                  alt="Корм Cat Energy PRO 500 г со вкусом риса">
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                  <img class="product__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x"
+                    alt="Корм Cat Energy PRO 500 г со вкусом риса">
+                </picture>
               </a>
               <div class="product__wrapper-text">
                 <h2 class="product__title"><a class="product__title-link" href="#">Cat Energy Slim 500 г</a></h2>
