--- a/source/form.html
+++ b/source/form.html
@@ -9,16 +9,15 @@
 <body>
 <div class="site-container">
   <header class="page-header">
-    <div class="container container--mobil">
+    <div class="container container--mobile">
       <nav class="main-nav main-nav--nojs">
         <div class="main-nav__wrapper-head">
           <a class="main-nav__logo-link" href="index.html">
-            <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39"
-              alt="логотип Cat Energy">
-            <img class="main-nav__logo-img--tablet" src="img/logo-tablet.svg" width="174" height="59"
-              alt="логотип Cat Energy">
-            <img class="main-nav__logo-img--desktop" src="img/logo-desktop.svg" width="203" height="60"
-              alt="логотип Cat Energy">
+            <picture>
+              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39" alt="Питание для котов Cat Energy">
+            </picture>
           </a>
           <a class="main-nav__toggle main-nav__toggle--opened">Меню</a>
         </div>
