--- a/source/index.html
+++ b/source/index.html
@@ -8,16 +8,15 @@
 </head>
 <body>
 <header class="page-header">
-  <div class="container container--mobil">
+  <div class="container container--mobile">
     <nav class="main-nav main-nav--nojs">
       <div class="main-nav__wrapper-head">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39" alt="Питание для котов Cat Energy">
+        </picture>
         <a class="main-nav__logo-link">
-          <img class="main-nav__logo-img" src="img/logo-mobile.svg" width="191" height="39"
-            alt="логотип Cat Energy">
-          <img class="main-nav__logo-img--tablet" src="img/logo-tablet.svg" width="174" height="59"
-            alt="логотип Cat Energy">
-          <img class="main-nav__logo-img--desktop" src="img/logo-desktop.svg" width="203" height="60"
-            alt="логотип Cat Energy">
         </a>
         <a class="main-nav__toggle main-nav__toggle--opened">Меню</a>
       </div>
@@ -48,12 +47,11 @@
           <a class="hero__button button" href="#">Подобрать програму</a>
         </div>
         <div class="hero__wrapper-img">
-          <img class="hero__img" src="img/index-can-mobile@1x.png" width="280" height="271"
-            alt="Питание Cat Energy Pro со вкусом курицы">
-          <img class="hero__img--tablet" src="img/index-can-tablet@1x.jpg" width="709" height="609"
-            alt="Питание Cat Energy Pro со вкусом курицы">
-          <img class="hero__img--desktop" src="img/index-can-desktop@1x.png" width="552" height="499"
-            alt="Питание Cat Energy Pro со вкусом курицы">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
+            <img class="hero__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Питание Cat Energy Pro со вкусом курицы">
+          </picture>
         </div>
       </div>
     </div>
@@ -108,8 +106,7 @@
       <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
         Slim.
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
-        в
-        день. </p>
+        в день. </p>
       <ul class="example__illustration-list">
         <li class="example__illustration-item">
           <p class="example__illustration-value example__illustration-value--border-weight">5 кг</p>
@@ -158,8 +155,7 @@
     <div class="container">
       <div class="footer__social-wrapper">
         <a class="footer__logo">
-          <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24"
-            alt="логотип Cat Energy">
+          <img class="footer__logo-img" src="img/logo-footer.svg" width="128" height="24" alt="логотип Cat Energy">
         </a>
         <ul class="footer__social-list">
           <li class="footer__social-item"><a class="footer__social-link footer__social-link--vk" href="#">Вконтакте
