--- a/source/catalog.html
+++ b/source/catalog.html
@@ -296,58 +296,68 @@
     <div class="additional-products__title-wrapper">
       <h2 class="additional-products__title">Дополнительные товары</h2>
     </div>
-    <ul class="additional-products__list">
-      <li class="additional-products__item">
-        <article class="additional-card">
-          <h3 class="additional-card__title">Сахарозаменитель</h3>
-          <div class="additional-card__description">
-            <p class="additional-card__value">1 упаковка (100 г)</p>
-            <p class="additional-card__price">200 Р.</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </article>
-      </li>
-      <li class="additional-products__item">
-        <article class="additional-card">
-          <h3 class="additional-card__title">Питьевая вода</h3>
-          <div class="additional-card__description">
-            <p class="additional-card__value">5 литров</p>
-            <p class="additional-card__price">50 Р.</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </article>
-      </li>
-      <li class="additional-products__item">
-        <article class="additional-card">
-          <h3 class="additional-card__title">Молоко</h3>
-          <div class="additional-card__description">
-            <p class="additional-card__value">1 литр</p>
-            <p class="additional-card__price">100 Р.</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </article>
-      </li>
-      <li class="additional-products__item">
-        <article class="additional-card">
-          <h3 class="additional-card__title">Витамины</h3>
-          <div class="additional-card__description">
-            <p class="additional-card__value">1 упаковка (30 г)</p>
-            <p class="additional-card__price">300 Р.</p>
-          </div>
-          <a class="additional-card__button button" href="#">Заказать</a>
-        </article>
-      </li>
-    </ul>
-    <p class="additional-products__gift">Закажите все и получите чехол для кота в подарок!</p>
+    <div class="container">
+      <ul class="additional-products__list">
+        <li class="additional-products__item">
+          <article class="additional-card">
+            <div class="additional-card__value-wrapper">
+              <h3 class="additional-card__title">Сахарозаменитель</h3>
+              <div class="additional-card__description">
+                <p class="additional-card__value">1 упаковка (100 г)</p>
+                <p class="additional-card__price">200 Р.</p>
+              </div>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </article>
+        </li>
+        <li class="additional-products__item">
+          <article class="additional-card">
+            <div class="additional-card__value-wrapper">
+              <h3 class="additional-card__title ">Питьевая вода</h3>
+              <div class="additional-card__description">
+                <p class="additional-card__value additional-card__value--water">5 литров</p>
+                <p class="additional-card__price">50 Р.</p>
+              </div>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </article>
+        </li>
+        <li class="additional-products__item">
+          <article class="additional-card">
+            <div class="additional-card__value-wrapper">
+              <h3 class="additional-card__title">Молоко</h3>
+              <div class="additional-card__description">
+                <p class="additional-card__value">1 литр</p>
+                <p class="additional-card__price">100 Р.</p>
+              </div>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </article>
+        </li>
+        <li class="additional-products__item">
+          <article class="additional-card">
+            <div class="additional-card__value-wrapper">
+              <h3 class="additional-card__title">Витамины</h3>
+              <div class="additional-card__description">
+                <p class="additional-card__value">1 упаковка (30 г)</p>
+                <p class="additional-card__price">300 Р.</p>
+              </div>
+            </div>
+            <a class="additional-card__button button" href="#">Заказать</a>
+          </article>
+        </li>
+      </ul>
+      <div class="additional-products__gift">
+        <p class="additional-products__gift-title">Закажите все<br> и получите чехол для кота в подарок!</p>
+      </div>
+    </div>
   </section>
 </main>
 <footer class="footer">
   <section class="footer__collaboration collaboration">
-    <div class="container">
-      <div class="collaboration__wrapper">
-        <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      </div>
+    <div class="collaboration__wrapper">
+      <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
+      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
     <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" width="320" height="400"
       alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
@@ -365,7 +375,14 @@
             </svg>
           </a></li>
           <li class="footer__social-item"><a class="footer__social-link footer__social-link--inst" href="#">Инстаграм
-            <svg class="footer__social-img  footer__social-img--inst" width="17" height="17" version="1.1" x="0" y="0" viewBox="0 0 16.1 16" xml:space="preserve"><path class="st0" d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/><path class="st0" d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1S9.7 11.1 8 11.1 4.9 9.7 4.9 8 6.3 4.9 8 4.9m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/><circle class="st0" cx="12.3" cy="3.7" r=".9"/></svg>
+            <svg class="footer__social-img  footer__social-img--inst" width="17" height="17" version="1.1" x="0" y="0"
+              viewBox="0 0 16.1 16">
+              <path class="st0"
+                d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/>
+              <path class="st0"
+                d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1S9.7 11.1 8 11.1 4.9 9.7 4.9 8 6.3 4.9 8 4.9m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/>
+              <circle class="st0" cx="12.3" cy="3.7" r=".9"/>
+            </svg>
           </a>
           </li>
           <li class="footer__social-item"><a class="footer__social-link footer__social-link--fb" href="#">Фейсбук
