--- a/source/index.html
+++ b/source/index.html
@@ -157,11 +157,10 @@
 </main>
 <footer class="footer">
   <section class="footer__collaboration collaboration">
-    <div class="container">
-      <div class="collaboration__wrapper">
-        <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
-        <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span class="collaboration__address--city">Санкт-Петербург</span></p>
-      </div>
+    <div class="collaboration__wrapper collaboration__wrapper--index">
+      <h2 class="collaboration__title">Приглашаем к сотрудничеству дилеров!</h2>
+      <p class="collaboration__address">ул. Большая Конюшенная, д. 19/8 <span class="collaboration__address--city">Санкт-Петербург</span>
+      </p>
     </div>
     <div class="collaboration__map">
       <picture class="collaboration__map-container">
