--- a/source/index.html
+++ b/source/index.html
@@ -37,6 +37,7 @@
   </div>
 </header>
 <main class="main-page">
+  <div class="hero-base">
   <section class="hero">
     <div class="container">
       <div class="hero__wrapper">
@@ -57,6 +58,7 @@
       </div>
     </div>
   </section>
+  </div>
   <section class="advantages">
     <h2 class="visually-hidden">Выбор программы</h2>
     <div class="container">
