--- a/source/catalog.html
+++ b/source/catalog.html
@@ -79,7 +79,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                  <img class="product__img" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
+                  <img class="product__img" width="140" height="144" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом курицы">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -111,7 +111,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
-                  <img class="product__img" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
+                  <img class="product__img" width="140" height="144" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом рыбы">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -143,7 +143,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                  <img class="product__img" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом рыбы">
+                  <img class="product__img" width="140" height="144" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом рыбы">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -175,7 +175,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                  <img class="product__img" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
+                  <img class="product__img" width="140" height="144" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом гречки">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -207,7 +207,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                  <img class="product__img" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом гречки">
+                  <img class="product__img" width="140" height="144" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 1000 г со вкусом гречки">
                 </picture>
               </a>
               <div class="product__wrapper-text">
@@ -239,7 +239,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                  <img class="product__img" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом риса">
+                  <img class="product__img" width="140" height="144" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Корм Cat Energy PRO 500 г со вкусом риса">
                 </picture>
               </a>
               <div class="product__wrapper-text">
