--- a/source/form.html
+++ b/source/form.html
@@ -39,13 +39,13 @@
       <h1 class="programs-selection__title">Подбор программы</h1>
     </div>
     <form class="programs-selection__form program-form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="container container-form">
+      <div class="container container__form">
         <p class="program-form__description">Заполните анкету и мы подберем<br> программу питания для вашего
           кота</p>
       </div>
       <div class="program-form__name-wrapper">
         <fieldset class="program-form__name">
-          <div class="container container-form container-form--name">
+          <div class="container container__form container__form--name">
             <ul class="program-form__list">
               <li class="program-form__item">
                 <label class="program-form__label program-form__label-nickname" for="nickname">Имя:*</label> <input class="program-form__input" name="name" type="text" id="nickname" placeholder="Барсик" value="">
@@ -63,7 +63,7 @@
         </fieldset>
         <fieldset class="program-form__task">
           <legend class="visually-hidden">Цель программы</legend>
-          <div class="container container-form container-form--task">
+          <div class="container container__form container__form--task">
             <ul class="program-form__list-radio">
               <li class="program-form__item-radio">
                 <input class="program-form__input-radio" name="target" type="radio" id="slim" value="slim" checked="">
@@ -85,7 +85,7 @@
         <h2 class="program-form__contacts-title program-form__legend">Контактные данные (владельца
           кота)
         </h2>
-        <div class="container container-form">
+        <div class="container container__form">
           <ul class="program-form__contacts-list">
             <li class="program-form__contacts-item program-form__item--phone">
               <label class="program-form__contacts-label program-form__contacts-label--phone" for="email">E-mail:*</label> <input class="program-form__contacts-input" name="email" type="email" id="email" placeholder="kuklachev@gmail.com">
@@ -104,13 +104,13 @@
       </div>
       <div class="program-form__comment program-form__fieldset">
         <h2 class="program-form__comment-title program-form__legend">Комментарий</h2>
-        <div class="container container-form">
+        <div class="container container__form">
             <textarea class="program-form__comment-input" name="comment" rows="10" wrap="soft" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
       </div>
       <div class="program-form__additionally program-form__fieldset">
         <h2 class="program-form__additionally-title program-form__legend">Дополнительно</h2>
-        <div class="container container-form">
+        <div class="container container__form">
           <ul class="program-form__list-checkbox">
             <li class="program-form__item-checkbox">
               <input class="program-form__input-checkbox" name="sugar-substitute" type="checkbox" id="sugar-substitute" checked=""> <label class="program-form__label-checkbox" for="sugar-substitute">Сахарозаменитель</label>
@@ -129,7 +129,7 @@
           </ul>
         </div>
       </div>
-      <div class="container container-form">
+      <div class="container container__form">
         <div class="program-form__button-wrapper">
           <button class="program-form__button button" type="submit">Отправить заявку</button>
           <small class="program-form__small">* — Обязательные поля</small>
@@ -150,10 +150,10 @@
       <picture>
         <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
         <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-        <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <img class="collaboration__map-img" width="320" height="400" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       </picture>
     </div>
-    <!--<iframe class="collaboration__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586871!2d30.3208533513628!3d59.93871648178722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579584540005!5m2!1sru!2sru" width="800" height="400" frameborder="0" style="border: 0;" allowfullscreen=""></iframe>-->
+    <iframe class="collaboration__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586871!2d30.3208533513628!3d59.93871648178722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579584540005!5m2!1sru!2sru" width="800" height="400" frameborder="0" style="border: 0;" allowfullscreen=""></iframe>
   </section>
   <div class="footer__social">
     <div class="container">
