--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,7 @@
             <picture>
               <source media="(min-width: 1440px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
-              <img class="hero__img" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Питание Cat Energy Pro со вкусом курицы">
+              <img class="hero__img" width="280" height="270" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Питание Cat Energy Pro со вкусом курицы">
             </picture>
           </div>
         </div>
@@ -134,7 +134,7 @@
                 <picture>
                   <source media="(min-width: 1440px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-                  <img class="example__img-slim" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
+                  <img class="example__img-slim" width="311" height="232" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Ваша кошка До замены обычного корма, на корм Cat Energy Slim">
                 </picture>
               </li><li class="example__slider-item">
                 <picture>
@@ -169,7 +169,7 @@
     <picture>
       <source media="(min-width: 1440px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
       <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
-      <img class="collaboration__map-img" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <img class="collaboration__map-img" width="320" height="400" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Офис Cat Energy на карте по адресу ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </picture>
     </div>
     <iframe class="collaboration__map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586871!2d30.3208533513628!3d59.93871648178722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579584540005!5m2!1sru!2sru" width="800" height="400" frameborder="0" style="border: 0;" allowfullscreen=""></iframe>
